--- a/FoodDelivery.WebUI/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="panel">
         <div id="categories" class="col-xs-3">
-            Сюда добавим контент позже
+            @Html.Action("Menu", "Nav")
         </div>
         <div class="col-xs-8">
             @RenderBody()
