--- a/FoodDelivery.WebUI/Views/Product/List.cshtml
+++ b/FoodDelivery.WebUI/Views/Product/List.cshtml
@@ -7,7 +7,7 @@
 
 @foreach (var p in @Model.Products)
 {
-    @Html.Partial("ProductSummary", p);
+    @Html.Partial("Summary", p);
 }
 
 <div class="btn-group pull-right">
