--- a/FoodDelivery.WebUI/Views/Cart/Index.cshtml
+++ b/FoodDelivery.WebUI/Views/Cart/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>
                     @using (Html.BeginForm("RemoveFromCart", "Cart"))
                     {
-                        @Html.Hidden("ProductId", line.Product.ProductId)
+                        @Html.Hidden("Id", line.Product.Id)
                         @Html.HiddenFor(x => x.ReturnUrl)
                         <input class="btn btn-sm btn-warning" type="submit" value="Удалить" />
                     }
@@ -51,5 +51,7 @@
 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+    @Html.ActionLink("Оформить заказ", "Checkout", null, new { @class = "btn btn-primary" })
 </div>
+
 
