--- a/FoodDelivery.WebUI/Views/Shared/Summary.cshtml
+++ b/FoodDelivery.WebUI/Views/Shared/Summary.cshtml
@@ -8,7 +8,7 @@
     @using (Html.BeginForm("AddToCart", "Cart"))
     {
         <div class="pull-right">
-            @Html.HiddenFor(x => x.ProductId)
+            @Html.HiddenFor(x => x.Id)
             @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
             <input type="submit" class="btn btn-success" value="Добавить в корзину" />
         </div>
