--- a/FoodDelivery.WebUI/Views/Shared/Summary.cshtml
+++ b/FoodDelivery.WebUI/Views/Shared/Summary.cshtml
@@ -1,6 +1,15 @@
 ﻿@model FoodDelivery.Domain.Entities.Product
 
 <div class="well">
+
+    @if (Model.ImageData != null)
+    {
+        <div class="pull-left" style="margin-right: 10px">
+            <img class="img-thumbnail" width="75" height="75"
+                 src="@Url.Action("GetImage", "Product", new { Model.Id })" />
+        </div>
+    }
+
     <h3>
         <strong>@Model.Name</strong>
         <span class="pull-right label label-primary">@Model.Price.ToString("0.00 руб")</span>
