--- a/FoodDelivery.DesktopUI/Views/ShellView.xaml
+++ b/FoodDelivery.DesktopUI/Views/ShellView.xaml
@@ -1,16 +1,14 @@
-﻿<Window x:Class="FoodDelivery.DesktopUI.Views.ShellView"
+﻿<mah:MetroWindow
+        x:Class="FoodDelivery.DesktopUI.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:FoodDelivery.DesktopUI.Views"
-        mc:Ignorable="d" FontSize="18"
-        Title="ShellView" Height="450" Width="800">
-    <DockPanel>
-
-
-        <Grid>
-            <ContentControl x:Name="ActiveItem" Margin="5"/>
-        </Grid>
-    </DockPanel>
-</Window>
+        mc:Ignorable="d" FontSize="18" SizeToContent="WidthAndHeight"
+        Title="Food Delivery" Height="450" Width="800" MinHeight="450" MinWidth="400">
+    <Grid>
+        <ContentControl x:Name="ActiveItem"/>
+    </Grid>
+</mah:MetroWindow>
